# lab-scheduler-adk

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
agents/: __init__.py  exam_scheduler_agent.py  run.py  scheduler_flow.py
api/: main.py  models.py
api/routes/: scheduling.py
docker/: Dockerfile.api  Dockerfile.ocr  Dockerfile.rag  README.md
docs/: JORNADA_DESENVOLVIMENTO.md  README.md
examples/: README.md  exam_spec.json
guardrails/: __init__.py  pii_detector.py  pii_models.py
mcp_servers/ocr/: ocr_engine.py  server.py
mcp_servers/rag/: exams_db.json  rag_engine.py  server.py
shared/: config.py
shared/models/: __init__.py  agent_spec.py
tests/: test_agent_flow.py  test_agent_spec.py  test_api.py  test_generator.py  test_ocr_server.py  test_pii_detector.py  test_rag_engine.py
transpiler/: __init__.py  cli.py  generator.py
transpiler/templates/: agent.py.j2
