[project]
name = "lab-scheduler-adk"
version = "0.1.0"
description = "Lab exam scheduler powered by Google ADK agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "google-adk>=0.1.0",
  "jinja2>=3.0",
  "mcp[cli]>=1.0",
  "google-generativeai>=0.8",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["transpiler", "agents", "api", "guardrails", "shared", "mcp_servers"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
